--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,15 @@
 
     <EditText
         android:id="@+id/search_bar"
-        android:hint="Enter a Pokemon #... only!"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:hint="Enter a Pokemon #... only!"
         app:layout_constraintEnd_toStartOf="@+id/search_button"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="10dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/search_button"
@@ -39,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/search_bar">
 
         <LinearLayout
-            android:id="@+id/poke_list"
+            android:id="@+id/poke_saved_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
