--- a/app/src/main/res/layout/activity_view_pokemon_details.xml
+++ b/app/src/main/res/layout/activity_view_pokemon_details.xml
@@ -28,10 +28,11 @@
         android:id="@+id/tv_pokemon_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Number"
         app:layout_constraintEnd_toEndOf="@+id/tv_pokemon_name"
         app:layout_constraintStart_toStartOf="@+id/tv_pokemon_name"
-        tools:layout_editor_absoluteY="35dp" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_name" />
 
     <TextView
         android:id="@+id/tv_type1"
@@ -77,9 +78,11 @@
     </ScrollView>
 
     <ImageView
+        android:id="@+id/image_pokemon"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
+        android:alpha=".75"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
