--- a/app/src/main/res/layout/activity_view_pokemon_details.xml
+++ b/app/src/main/res/layout/activity_view_pokemon_details.xml
@@ -80,12 +80,14 @@
 
     <ImageView
         android:id="@+id/image_pokemon"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:alpha=".75"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:alpha=".50"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/scrollView2" />
 
