--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/edit_text_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Enter Pokeman Name or Number"
+        android:hint="@string/search_hint"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,7 +18,7 @@
         android:id="@+id/button_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search"
+        android:text="@string/search_button_text"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ScrollView
