--- a/SprintChallengeThree/app/src/main/res/layout/activity_main.xml
+++ b/SprintChallengeThree/app/src/main/res/layout/activity_main.xml
@@ -24,16 +24,12 @@
             android:text="@string/pokemon"
             android:textSize="18sp" />
 
-        <EditText
-            android:id="@+id/edSearch"
-            android:layout_width="0dp"
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginBottom="4dp"
             android:layout_weight="1"
-            android:ems="10"
-            android:hint="@string/name_of_pokemon"
-            android:inputType="textPersonName" />
+            android:hint="Enter number or Name" />
 
         <ImageView
             android:id="@+id/imageView"
