--- a/SprintChallengeThree/app/src/main/res/layout/activity_main.xml
+++ b/SprintChallengeThree/app/src/main/res/layout/activity_main.xml
@@ -24,22 +24,19 @@
             android:text="@string/pokemon"
             android:textSize="18sp" />
 
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/editTextPokemon"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Enter number or Name" />
 
-        <ImageView
-            android:id="@+id/imageView"
+        <ImageButton
+            android:id="@+id/imageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp"
-            android:src="@drawable/ic_search_black_24dp" />
+            app:srcCompat="@drawable/ic_search_black_24dp" />
+
     </LinearLayout>
 
     <ScrollView
