--- a/SprintChallengeThree/app/src/main/res/layout/activity_pokemon_detail.xml
+++ b/SprintChallengeThree/app/src/main/res/layout/activity_pokemon_detail.xml
@@ -19,6 +19,12 @@
         android:layout_height="wrap_content"
         android:text="TextView" />
 
+    <TextView
+        android:id="@+id/tvPokemonType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
     <ImageView
         android:id="@+id/imageViewPokemon"
         android:layout_width="match_parent"
