--- a/SprintChallengeThree/app/src/main/res/layout/activity_main.xml
+++ b/SprintChallengeThree/app/src/main/res/layout/activity_main.xml
@@ -42,8 +42,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="4dp">
+        android:layout_margin="4dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/parentLayout"
