--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Pokemon Name or Pokedex ID"
+        android:hint="@string/search_hint"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -21,7 +21,7 @@
         android:id="@+id/search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search"
+        android:text="@string/search_button_text"
         app:layout_constraintTop_toBottomOf="@id/pokemon_edit_text"
         app:layout_constraintLeft_toLeftOf="@id/pokemon_edit_text"
         app:layout_constraintRight_toRightOf="parent"/>
