project finished, working on stretches.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_text">
 
         <LinearLayout
-            android:id="@+id/poke_saved_list"
+            android:id="@+id/poke_saved_list_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
