Fixed all the bugs, Everything is working, TODO: set up persistance, and work on stretch goals

--- a/app/src/main/res/layout/activity_poke_favorites_list.xml
+++ b/app/src/main/res/layout/activity_poke_favorites_list.xml
@@ -15,6 +15,7 @@
         <LinearLayout
             android:id="@+id/scrollview_ll_list_view"
             android:layout_width="match_parent"
+            android:orientation="vertical"
             android:layout_height="wrap_content">
 
             <TextView
