--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -13,7 +13,6 @@
         android:layout_marginTop="60dp"
         android:padding="30dp"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_launcher_background"
         app:layout_constraintTop_toBottomOf="@id/poke_type2" />
 
     <TextView
@@ -64,6 +63,7 @@
         <LinearLayout
             android:id="@+id/scrollview_ll_details_view"
             android:layout_width="match_parent"
+            android:orientation="vertical"
             android:layout_height="wrap_content">
 
             <TextView
